option('apml-interface', type: 'boolean', value: true, description: 'Enable APML interface')
option('apml-nda', type: 'boolean', value: true, description: 'Build the RAS application with APML NDA library')
option('pldm-interface', type: 'boolean', value: false, description: 'Enable PLDM interface')
option('config_file', type: 'string', value: '/var/lib/amd-bmc-ras/ras_config', description: 'Path to the RAS config file')
option('platform_default_file', type: 'string', value: '/var/lib/amd-bmc-ras/platform_default.json', description: 'Path to the default platform configuration file')
option('src_config_file', type: 'string', value: '/usr/share/amd-bmc-ras/ras_config.json', description: 'Path to the source RAS config file')
option('src_platform_default_file', type: 'string', value: '/usr/share/amd-bmc-ras/platform_default.json', description: 'Path to the source default platform configuration file')
option('ras_dir', type: 'string', value: '/var/lib/amd-bmc-ras/', description: 'Path to the RAS directory')
option('index_file', type: 'string', value: '/var/lib/amd-bmc-ras/current_index', description: 'Path to the current index file')
