interface_src_files = ['host-transport-extensions/default/apml_interface.cpp',
                       'host-transport-extensions/default/cper_generator.cpp',
                       'host-transport-extensions/default/config_manager.cpp']

interface_includes = 'host-transport-extensions/default/inc'

